# hs-gauge

./: .appveyor.yml  .gitignore  .haskell-ci  .travis.yml  Gauge.hs  README.markdown  appveyor.yml  cabal.project.ghcjs  changelog.md  gauge.cabal  stack.yaml
.travis/: stack-ghc-7.10.yaml  stack-ghc-7.8.yaml  stack-ghc-8.0.yaml  stack-ghc-8.2.yaml
Gauge/: Analysis.hs  Benchmark.hs  CSV.hs  Format.hs  IO.hs  Internal.hs  ListMap.hs  Main.hs  Measurement.hs  Monad.hs  Optional.hs  Report.hs  Time.hs  Types.hs
Gauge/IO/: Printf.hs
Gauge/Main/: Options.hs
Gauge/Monad/: ExceptT.hs  Internal.hs
Gauge/Source/: GC.hs  RUsage.hsc  Time.hsc
app/: Options.hs  Report.hs
benchs/: Main.hs
cbits/: cycles.c  cycles.h  rusage.c  time-osx.c  time-posix.c  time-windows.c
math-functions/Numeric/: Polynomial.hs  RootFinding.hs  Series.hs  SpecFunctions.hs  Sum.hs
math-functions/Numeric/MathFunctions/: Comparison.hs  Constants.hs
math-functions/Numeric/Polynomial/: Chebyshev.hs
math-functions/Numeric/SpecFunctions/: Extra.hs  Internal.hs
mwc-random/System/Random/: MWC.hs
statistics/Statistics/: Distribution.hs  Function.hs  Internal.hs  Matrix.hs  Quantile.hs  Regression.hs  Resampling.hs  Types.hs
statistics/Statistics/Distribution/: Normal.hs
statistics/Statistics/Math/: RootFinding.hs
statistics/Statistics/Matrix/: Algorithms.hs  Mutable.hs  Types.hs
statistics/Statistics/Resampling/: Bootstrap.hs
statistics/Statistics/Sample/: Histogram.hs  Internal.hs
tests/: Cleanup.hs  Properties.hs  Sanity.hs  Tests.hs
