name:           gauge
version:        0.1.0
synopsis:       Robust, reliable performance measurement and analysis
license:        BSD3
license-file:   LICENSE
author:         Bryan O'Sullivan <bos@serpentine.com>
maintainer:     Vincent Hanquez <vincent@snarc.org>
copyright:      2009-2016 Bryan O'Sullivan and others
category:       Development, Performance, Testing, Benchmarking
homepage:       https://github.com/vincenthz/hs-gauge
bug-reports:    https://github.com/vincenthz/hs-gauge/issues
build-type:     Simple
cabal-version:  >= 1.10
extra-source-files:
  README.markdown
  changelog.md
tested-with:
  GHC==7.8.4,
  GHC==7.10.3,
  GHC==8.0.2,
  GHC==8.2.1

description:
  This library provides a powerful but simple way to measure software
  performance.  It provides both a framework for executing and
  analysing benchmarks and a set of driver functions that makes it
  easy to build and run benchmarks, and to analyse their results.

flag fast
  description: compile without optimizations
  default: False
  manual: True

library
  exposed-modules:
    Gauge
    Gauge.Main
    Gauge.Types
    Gauge.Analysis
  other-modules:
    Gauge.IO.Printf
    Gauge.Internal
    Gauge.Monad.Internal
    Gauge.Monad.ExceptT
    Gauge.Main.Options
    Gauge.Measurement
    Gauge.Monad
    Statistics.Distribution
    Statistics.Distribution.Normal
    Statistics.Function
    Statistics.Internal
    Statistics.Math.RootFinding
    Statistics.Matrix
    Statistics.Matrix.Algorithms
    Statistics.Matrix.Mutable
    Statistics.Matrix.Types
    Statistics.Quantile
    Statistics.Regression
    Statistics.Resampling
    Statistics.Resampling.Bootstrap
    Statistics.Sample
    Statistics.Sample.Histogram
    Statistics.Sample.Internal
    Statistics.Sample.KernelDensity
    Statistics.Transform
    Statistics.Types
    Statistics.Types.Internal

  hs-source-dirs: . statistics

  c-sources: cbits/cycles.c
  if os(darwin)
    c-sources: cbits/time-osx.c
  else {
    if os(windows)
      c-sources: cbits/time-windows.c
    else
      c-sources: cbits/time-posix.c
  }

  other-modules:
    Paths_gauge

  build-depends:
    ansi-wl-pprint >= 0.6.7.2,
    base >= 4.5 && < 5,
    basement,
    foundation,
    code-page,
    containers,
    deepseq >= 1.1.0.0,
    directory,
    -- exceptions >= 0.8.2 && < 0.9,
    filepath,
    Glob >= 0.7.2,
    -- mtl >= 2,
    mwc-random >= 0.8.0.3,
    optparse-applicative >= 0.13,
    --transformers,
    vector >= 0.7.1,

    -- formely statistics dependency that we need
    math-functions,
    vector-algorithms

  default-language: Haskell2010
  ghc-options: -Wall -funbox-strict-fields
  if impl(ghc >= 6.8)
    ghc-options: -fwarn-tabs
  if flag(fast)
    ghc-options: -O0
  else
    ghc-options: -O2

test-suite sanity
  type:                 exitcode-stdio-1.0
  hs-source-dirs:       tests
  main-is:              Sanity.hs
  default-language:     Haskell2010
  ghc-options:          -Wall -rtsopts
  if flag(fast)
    ghc-options:        -O0
  else
    ghc-options:        -O2

  build-depends:
    HUnit,
    base,
    bytestring,
    gauge,
    deepseq,
    tasty,
    tasty-hunit

test-suite tests
  type:                 exitcode-stdio-1.0
  hs-source-dirs:       tests
  main-is:              Tests.hs
  default-language:     Haskell2010
  other-modules:        Properties

  ghc-options:
    -Wall -threaded     -O0 -rtsopts

  build-depends:
    QuickCheck >= 2.4,
    base,
    gauge,
    statistics,
    tasty,
    tasty-quickcheck,
    vector

test-suite cleanup
  type:                 exitcode-stdio-1.0
  hs-source-dirs:       tests
  default-language:     Haskell2010
  main-is:              Cleanup.hs

  ghc-options:
    -Wall -threaded     -O0 -rtsopts

  build-depends:
    HUnit,
    base,
    bytestring,
    gauge,
    deepseq,
    directory,
    foundation,
    tasty,
    tasty-hunit

source-repository head
  type:     git
  location: https://github.com/vincenthz/hs-gauge
